Use Gradle instead of maven build system
  + Update gerrit and sonar plugin
  + Update some other depndencies