@@ -1,25 +1,31 @@
 package ir.sahab.sonar.gerrit.integrator;
 
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.springframework.test.web.client.match.MockRestRequestMatchers.header;
+import static org.springframework.test.web.client.match.MockRestRequestMatchers.method;
+import static org.springframework.test.web.client.match.MockRestRequestMatchers.requestTo;
+import static org.springframework.test.web.client.response.MockRestResponseCreators.withSuccess;
+
 import ir.sahab.sonar.gerrit.integrator.service.GerritService;
 import ir.sahab.sonar.gerrit.integrator.service.SonarQubeService;
+import java.io.IOException;
+import java.net.URISyntaxException;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.util.Base64;
+import java.util.Objects;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.web.client.TestRestTemplate;
-import org.springframework.http.*;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.HttpMethod;
+import org.springframework.http.MediaType;
+import org.springframework.http.RequestEntity;
+import org.springframework.http.ResponseEntity;
 import org.springframework.test.web.client.MockRestServiceServer;
-import java.io.IOException;
-import java.net.URISyntaxException;
-import java.nio.charset.StandardCharsets;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.util.Base64;
-
-import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.springframework.test.web.client.match.MockRestRequestMatchers.*;
-import static org.springframework.test.web.client.response.MockRestResponseCreators.withSuccess;
 
 @SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT)
 class SonarGerritIntegratorApplicationTests {
@@ -44,31 +50,41 @@ class SonarGerritIntegratorApplicationTests {
 
 	@Test
 	void testWebhook() throws URISyntaxException, IOException {
-		Path path = Paths.get(this.getClass().getResource("/response.json").toURI());
-
-		String authHeader = "Basic " + Base64.getEncoder().encodeToString(
-				("sonarToken" + ':').getBytes());
-		sonarServer.expect(requestTo("http://localhost/api/issues/search?pullRequest=pKey&componentKeys=ir.sahab:project&resolved=false"))
+		Path sonarApiResponseFilePath = getResourceFilePath("/response.json");
+		String sonarApi = "http://localhost/api/issues/search?"
+				+ "pullRequest=pKey&componentKeys=project&resolved=false";
+		String sonarAuthHeader = basicAuthorizationHeader("sonarToken", "");
+		sonarServer.expect(requestTo(sonarApi))
 				.andExpect(method(HttpMethod.GET))
-				.andExpect(header("Authorization", authHeader))
-				.andRespond(withSuccess(Files.readAllBytes(path), MediaType.APPLICATION_JSON));
+				.andExpect(header("Authorization", sonarAuthHeader))
+				.andRespond(withSuccess(Files.readAllBytes(sonarApiResponseFilePath),
+						MediaType.APPLICATION_JSON));
 
-		authHeader = "Basic " + Base64.getEncoder().encodeToString(
-				("ci" + ':' + "gerritToken").getBytes());
+		String gerritAuthHeader = basicAuthorizationHeader("ci", "gerritToken");
 		gerritServer.expect(requestTo("http://localhost/a/changes/1147/revisions/7/review"))
 				.andExpect(method(HttpMethod.POST))
-				.andExpect(header("Authorization", authHeader))
+				.andExpect(header("Authorization", gerritAuthHeader))
 				.andRespond(withSuccess());
 
-		path = Paths.get(this.getClass().getResource("/webhook.json").toURI());
-		String data = new String(Files.readAllBytes(path), StandardCharsets.UTF_8);
+		String webhookContent = Files.readString(getResourceFilePath("/webhook.json"));
 		HttpHeaders headers = new HttpHeaders();
 		headers.add(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE);
-		RequestEntity<String> e = new RequestEntity<>(data, headers, null, null, null);
-		ResponseEntity<String> response = restTemplate.exchange("/", HttpMethod.POST, e, String.class);
+		RequestEntity<String> webhookRequest =
+				new RequestEntity<>(webhookContent, headers, null, null, null);
+		ResponseEntity<String> response = restTemplate
+				.exchange("/", HttpMethod.POST, webhookRequest, String.class);
 
 		assertTrue(response.getStatusCode().is2xxSuccessful());
 		sonarServer.verify();
 		gerritServer.verify();
+	}
+
+	private static String basicAuthorizationHeader(String username, String password) {
+		return "Basic " + Base64.getEncoder()
+				.encodeToString((username + ":" + password).getBytes());
+	}
+
+	private Path getResourceFilePath(String name) throws URISyntaxException {
+		return Paths.get(Objects.requireNonNull(this.getClass().getResource(name)).toURI());
 	}
 }
